@startuml
[*] -down-> INIT

state switchSync <<choice>>

INIT --> PREPOPULATE : history
INIT --> SETUP : managed
INIT --> SETUP : online

PREPOPULATE : enter / fill port-list
PREPOPULATE : enter / setup port workers
PREPOPULATE : enter / setup ISL workers
PREPOPULATE -> SETUP : managed
PREPOPULATE --> OFFLINE : offline

switchSync -> SETUP : [is-online]
switchSync -> OFFLINE : [is-offline]

SETUP : enter / [setup portWorker for portsAdded()]
SETUP : enter / [emit online for portAll()]
SETUP : enter / [emit port-del for portsRemoved()]
SETUP : enter / [emit port-down for portsBecomeDown()]
SETUP : enter / [emit port-up for portsBecomeUp()]
SETUP --> ONLINE : next

ONLINE -> ONLINE : port-add / setup port worker\nport-del / kill port worker\nport-up / proxy\nport-down / proxy\ndiscovery / proxy
ONLINE -> OFFLINE : offline
ONLINE --> UNMANAGED : unmanaged

OFFLINE : enter / [emit offline for portAll()]
OFFLINE --> SETUP : online

UNMANAGED : enter / emit offline [all ports]
UNMANAGED -> switchSync : managed
@enduml
